tests/reference/asr-expr10-efcbb1b.stderr
Traceback (most recent call last):
  File "$DIR/src/bin/../runtime/lpython_parser.py", line 152, in <module>
    v.visit(a2)
  File "$DIR/src/runtime/python_ast.py", line 1816, in visit
    return node.walkabout(self)
  File "$DIR/src/runtime/python_ast.py", line 51, in walkabout
    return visitor.visit_Module(self)
  File "$DIR/src/runtime/python_ast.py", line 2323, in visit_Module
    self.visit(x.body[i])
  File "$DIR/src/runtime/python_ast.py", line 1816, in visit
    return node.walkabout(self)
  File "$DIR/src/runtime/python_ast.py", line 142, in walkabout
    return visitor.visit_FunctionDef(self)
  File "$DIR/src/runtime/python_ast.py", line 2355, in visit_FunctionDef
    self.visit(x.body[i])
  File "$DIR/src/runtime/python_ast.py", line 1816, in visit
    return node.walkabout(self)
  File "$DIR/src/runtime/python_ast.py", line 295, in walkabout
    return visitor.visit_AnnAssign(self)
  File "$DIR/src/runtime/python_ast.py", line 2449, in visit_AnnAssign
    self.visit(x.annotation)
  File "$DIR/src/runtime/python_ast.py", line 1816, in visit
    return node.walkabout(self)
  File "$DIR/src/runtime/python_ast.py", line 1218, in walkabout
    return visitor.visit_Name(self)
  File "$DIR/src/runtime/python_ast.py", line 2894, in visit_Name
    self.write_string(x.id)
  File "$DIR/src/bin/../runtime/lpython_parser.py", line 142, in write_string
    self.write_int64(len(s))
KeyboardInterrupt
The command 'python $DIR/src/bin/../runtime/lpython_parser.py $DIR/src/bin/../runtime/lpython_builtin.py $DIR/src/bin/../runtime/lpython_builtin.pyF2137F1' failed.
semantic error: The file '$DIR/src/bin/../runtime/lpython_builtin.py' failed to parse
  --> tests/expr10.py:26:10
   |
26 |     c = +complex(1, 2)
   |          ^^^^^^^^^^^^^ 
